Fixed #2307 - Tooltip: word wrap

--- a/src/components/tooltip/Tooltip.css
+++ b/src/components/tooltip/Tooltip.css
@@ -16,6 +16,7 @@
 
 .p-tooltip .p-tooltip-text {
    white-space: pre-line;
+   word-break: break-word;
 }
 
 .p-tooltip-arrow {
